# Music-Tycoon-Simulator-Cpp

./: CMakeLists.txt  README.md  imgui.ini
headers/: Simulation.h  album.h  config.h  gamestate.h  graphics.h  helper.h  player.h  song.h
src/: album.cpp  gamestate.cpp  graphics.cpp  helper.cpp  main.cpp  player.cpp  simulation.cpp  song.cpp
